--- a/app/admin/routes/routes.html
+++ b/app/admin/routes/routes.html
@@ -5,7 +5,7 @@ Routes - Prototype
 {% endblock %}
 
 {% block admin_content %}
-<h1 class="heading-large">Routes</h1>
+<h1 class="{{ govukClassname('heading-large') }}">Routes</h1>
 
 <table>
 {% for route in routes %}
