--- a/app/admin/session/session.html
+++ b/app/admin/session/session.html
@@ -5,7 +5,7 @@ Session - Prototype
 {% endblock %}
 
 {% block admin_content %}
-<h1 class="heading-xlarge">User session</h1>
+<h1 class="{{ govukClassname('heading-large') }}">User session</h1>
 <p>{{ sessionID }}</p>
 {% if cloned_session %}
 <div class="panel panel-wide"><p>Cloned user session</p></div>
