--- a/app/admin/autofields/autofields.html
+++ b/app/admin/autofields/autofields.html
@@ -15,7 +15,7 @@ Autofields - Prototype
 </table>
 
 <textarea id="autofields" cols="80" rows="20">{{json | safe}}</textarea>
-<p><span class="button" id="update">Update autofield values</span></p>
+<p><button class="button" id="update">Update autofield values</button></p>
 
 <script>
 var headers = new Headers({
