Add route url to block page

--- a/app/admin/admin-base/admin-base.html
+++ b/app/admin/admin-base/admin-base.html
@@ -83,6 +83,11 @@ dragula([itemContainer], {
 })
 </script>
 <style type="text/css">
+h1 small {
+  display: block;
+  font-size: 2rem;
+}
+
 textarea {
   border: solid 1px #000;
   margin: 2em 0;
