--- a/app/admin/prop/prop.html
+++ b/app/admin/prop/prop.html
@@ -52,7 +52,7 @@ Prop - Prototype
 {{ Block.Text('value', value=valueItem) }}
 <div class="blockActions">
 <p class="blockLink"><a href="/admin/block/{{ valueItem }}" title="{{valueItem}} block">{}</a></p>
-<p class="blockRemove"><a href="/admin/block/{{ valueItem }}" title="Remove {{valueItem}}">⌫</a></p>
+<p class="blockRemove"><span title="Remove {{valueItem}}">⌫</span></p>
 </div>
 </div>
 {% endfor %}
