Hide block actions when dragging list item

--- a/app/admin/admin-base/admin-base.html
+++ b/app/admin/admin-base/admin-base.html
@@ -149,6 +149,9 @@ textarea {
   margin-top: 0;
   width: 100%;
 }
+.gu-mirror .blockActions {
+  display: none;
+}
 .propContainer:hover:before{
   background: #000;
 }
