Tweak action padding

--- a/app/admin/admin-base/admin-base.html
+++ b/app/admin/admin-base/admin-base.html
@@ -169,10 +169,17 @@ textarea {
 .blockActions a {
   text-decoration: none;
   cursor: pointer;
+  padding: 0.25rem;
+}
+.blockActions span {
+  color: #df3034;
 }
 .blockActions span:hover,
 .blockActions a:hover {
-  text-decoration: underline;
+  ztext-decoration: underline;
+}
+.blockActions span:hover {
+  color: #b10e1e;
 }
 </style>
 {% endblock %}
