Appify relevant links

--- a/app/admin/admin-base/admin-base.html
+++ b/app/admin/admin-base/admin-base.html
@@ -121,6 +121,29 @@ textarea {
   width: 100%;
 }
 
+h1 a,
+.blockProperties a {
+  text-decoration: none;
+  pointer: cursor;
+}
+h1 a:hover,
+.blockProperties a:hover {
+  text-decoration: underline;
+}
+h1 a:visited,
+td a:visited,
+.blockProperties a:visited {
+  color: #005ea5;
+}
+h1 a:visited:hover,
+td a:visited:hover,
+.blockProperties a:visited:hover {
+  color: #2b8cc4;
+}
+.routes-link a {
+  text-decoration: none;
+}
+
 .propContainer {
   position: relative;
   padding-left: 20px;
