Add ability to render full pages within flowchart

--- a/app/admin/block/block.html
+++ b/app/admin/block/block.html
@@ -1,7 +1,7 @@
 {% extends 'admin/admin-base/admin-base.html' %}
 
 {% block page_title %}
-Block - Proto_blockType
+{{block}} - Block
 {% endblock %}
 
 {% block admin_content %}
