Noodle with flowchart for printing

--- a/app/admin/prop/prop.html
+++ b/app/admin/prop/prop.html
@@ -1,7 +1,7 @@
 {% extends 'admin/admin-base/admin-base.html' %}
 
 {% block page_title %}
-Prop - Prototype
+{{ prop }} - {{ block }}
 {% endblock %}
 
 {% block admin_content %}
